Remove padding from .container to stop overflow

--- a/style.css
+++ b/style.css
@@ -147,7 +147,6 @@ body {
     "log"
     "player-info";
   box-sizing: border-box;
-  padding: 10px 20px;
 }
 
 .header {
